--- a/index.html
+++ b/index.html
@@ -4,31 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>АВС+ | Официальный дистрибьютор КЭАЗ</title>
+    <title>Азбука покрытий</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 
 <body>
     <div class="pages">
-        <div class="pages__project">Проект сайта АВС+</div>
+        <div class="pages__project">Проект сайта Азбука покрытий</div>
         <div class="pages__title">Готовность по проекту</div>
         <ul class="pages__list">
             <li class="pages__item pages__item_red">
-                <a href="avc-plus.html" target="_blank">
+                <a href="azbuka46.html" target="_blank">
                     <span class="pages__name">Главная страница</span>
-                    <span class="pages__href">avc-plus.html</span>
+                    <span class="pages__href">azbuka46.html</span>
                 </a>
             </li>
             <li class="pages__item pages__item_red">
                 <a href="catalog.html" target="_blank">
                     <span class="pages__name">Каталог</span>
                     <span class="pages__href">catalog.html</span>
-                </a>
-            </li>
-            <li class="pages__item pages__item_red">
-                <a href="category.html" target="_blank">
-                    <span class="pages__name">Категория</span>
-                    <span class="pages__href">category.html</span>
                 </a>
             </li>
             <li class="pages__item pages__item_red">
@@ -56,9 +50,9 @@
                 </a>
             </li>
             <li class="pages__item pages__item_red">
-                <a href="feedback.html" target="_blank">
-                    <span class="pages__name">Отзывы</span>
-                    <span class="pages__href">feedback.html</span>
+                <a href="example.html" target="_blank">
+                    <span class="pages__name">Примеры объектов</span>
+                    <span class="pages__href">example.html</span>
                 </a>
             </li>
         </ul>
