--- a/azbuka46.html
+++ b/azbuka46.html
@@ -23,7 +23,7 @@
                     <div class="header-contacts-row">
                         <div class="header-logo">
                             <a href="/">
-                                <img alt="" src="images/logo.png">
+                                <img alt="" src="images/logo.svg">
                             </a>
                         </div>
                         <div class="header-phones">
