--- a/azbuka46.html
+++ b/azbuka46.html
@@ -149,7 +149,67 @@
             </header>
         </div>
     </div>
-
+    <section class="container">
+        <div class="main-flex-catalog">
+            <div class="main-catalog-item">
+                <div class="main-catalog-image">
+                    <a href="#"><img alt="" src="images/catalog1.jpg"></a>
+                </div>
+                <div class="main-catalog-title">
+                    <a href="#">Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM)</a>
+                </div>
+                <div class="main-catalog-description">
+                    <p>Высокая прочность материала позволяет выкладывать дорожки во дворах многоквартирных домов и на
+                        частной территории, а также выстилать открытые террасы и другие площадки.
+                    </p>
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        class="page-btn">Заказать консультацию</button>
+                </div>
+            </div>
+            <div class="main-catalog-item">
+                <div class="main-catalog-image">
+                    <a href="#"><img alt="" src="images/catalog2.jpg"></a>
+                </div>
+                <div class="main-catalog-title">
+                    <a href="#">ANT Flex Eco Monolit</a>
+                </div>
+                <div class="main-catalog-description">
+                    <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового связующего,
+                        позволяющего получать высокую прочность сцепления резиновых гранул.</p>
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        class="page-btn">Заказать консультацию</button>
+                </div>
+            </div>
+            <div class="main-catalog-item">
+                <div class="main-catalog-image">
+                    <a href="#"><img alt="" src="images/catalog3.jpg"></a>
+                </div>
+                <div class="main-catalog-title">
+                    <a href="#">ANT Flex Eco Granit</a>
+                </div>
+                <div class="main-catalog-description">
+                    <p>Cовременное напольное рулонное покрытие ANT Flex Eco Granit на основе цветных ЭПДМ гранул и
+                        регенератной резиновой крошки (не более 50 %).</p>
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        class="page-btn">Заказать консультацию</button>
+                </div>
+            </div>
+            <div class="main-catalog-item">
+                <div class="main-catalog-image">
+                    <a href="#"><img alt="" src="images/catalog4.jpg"></a>
+                </div>
+                <div class="main-catalog-title">
+                    <a href="#">ANT Flex Eco Премиум</a>
+                </div>
+                <div class="main-catalog-description">
+                    <p>Cовременное напольное рулонное покрытие ANT Flex Eco на основе крошки из высококачественного
+                        каучука ЭПДМ (TPV).</p>
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        class="page-btn">Заказать консультацию</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="container">
         <h2 class="title-page-item">Контакты</h2>
         <div class="main-page-contacts">
