--- a/azbuka46.html
+++ b/azbuka46.html
@@ -156,11 +156,12 @@
                     <a href="#"><img alt="" src="images/catalog1.jpg"></a>
                 </div>
                 <div class="main-catalog-title">
-                    <a href="#">Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM)</a>
+                    <a href="#">Бесшовное резиновое покрытие</a>
                 </div>
                 <div class="main-catalog-description">
-                    <p>Высокая прочность материала позволяет выкладывать дорожки во дворах многоквартирных домов и на
-                        частной территории, а также выстилать открытые террасы и другие площадки.
+                    <p> Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM). Высокая прочность материала позволяет
+                        выкладывать дорожки во дворах многоквартирных домов и на
+                        частной территории и другие площадки.
                     </p>
                     <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
                         class="page-btn">Заказать консультацию</button>
