--- a/azbuka46.html
+++ b/azbuka46.html
@@ -242,7 +242,7 @@
             <div class="footer-flex-block">
                 <div class="header-logo">
                     <a href="/">
-                        <img alt="" src="images/logo.png">
+                        <img alt="" src="images/logo.svg">
                     </a>
                 </div>
                 <div class="footer-links">
