--- a/azbuka46.html
+++ b/azbuka46.html
@@ -152,62 +152,103 @@
     <section class="container">
         <div class="main-flex-catalog">
             <div class="main-catalog-item">
-                <div class="main-catalog-image">
-                    <a href="#"><img alt="" src="images/catalog1.jpg"></a>
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog1.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">Бесшовное резиновое покрытие</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p> Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM). Высокая прочность материала
+                            позволяет
+                            выкладывать дорожки во дворах многоквартирных домов и на
+                            частной территории и другие площадки.
+                        </p>
+                    </div>
                 </div>
-                <div class="main-catalog-title">
-                    <a href="#">Бесшовное резиновое покрытие</a>
-                </div>
-                <div class="main-catalog-description">
-                    <p> Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM). Высокая прочность материала позволяет
-                        выкладывать дорожки во дворах многоквартирных домов и на
-                        частной территории и другие площадки.
-                    </p>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                        class="page-btn">Заказать консультацию</button>
-                </div>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
             <div class="main-catalog-item">
-                <div class="main-catalog-image">
-                    <a href="#"><img alt="" src="images/catalog2.jpg"></a>
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog2.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Flex Eco Monolit</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового
+                            связующего,
+                            позволяющего получать высокую прочность сцепления резиновых гранул.</p>
+                    </div>
                 </div>
-                <div class="main-catalog-title">
-                    <a href="#">ANT Flex Eco Monolit</a>
-                </div>
-                <div class="main-catalog-description">
-                    <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового связующего,
-                        позволяющего получать высокую прочность сцепления резиновых гранул.</p>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                        class="page-btn">Заказать консультацию</button>
-                </div>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
             <div class="main-catalog-item">
-                <div class="main-catalog-image">
-                    <a href="#"><img alt="" src="images/catalog3.jpg"></a>
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog3.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Flex Eco Granit</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco Granit на основе цветных ЭПДМ гранул и
+                            регенератной резиновой крошки (не более 50 %).</p>
+                    </div>
                 </div>
-                <div class="main-catalog-title">
-                    <a href="#">ANT Flex Eco Granit</a>
-                </div>
-                <div class="main-catalog-description">
-                    <p>Cовременное напольное рулонное покрытие ANT Flex Eco Granit на основе цветных ЭПДМ гранул и
-                        регенератной резиновой крошки (не более 50 %).</p>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                        class="page-btn">Заказать консультацию</button>
-                </div>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
             <div class="main-catalog-item">
-                <div class="main-catalog-image">
-                    <a href="#"><img alt="" src="images/catalog4.jpg"></a>
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog4.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Flex Eco Премиум</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco на основе крошки из высококачественного
+                            каучука ЭПДМ (TPV).</p>
+                    </div>
                 </div>
-                <div class="main-catalog-title">
-                    <a href="#">ANT Flex Eco Премиум</a>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
+            </div>
+            <div class="main-catalog-item">
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog5.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Mix</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Cовременное напольное покрытие на основе регенератной резиновой крошки и цветных ЭПДМ гранул
+                            (не менее 15%).</p>
+                    </div>
                 </div>
-                <div class="main-catalog-description">
-                    <p>Cовременное напольное рулонное покрытие ANT Flex Eco на основе крошки из высококачественного
-                        каучука ЭПДМ (TPV).</p>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                        class="page-btn">Заказать консультацию</button>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
+            </div>
+            <div class="main-catalog-item">
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog5.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Flex Soft (P650-P580)</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Современная амортизационная подложка на основе регенератной резиновой крошки.</p>
+                    </div>
                 </div>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
         </div>
     </section>
