--- a/azbuka46.html
+++ b/azbuka46.html
@@ -346,6 +346,31 @@
             </div>
         </div>
     </section>
+    <section class="gray-block">
+        <div class="container">
+            <h3>Партнёрство с нами в 3 шага</h3>
+            <div class="partners-flex">
+                <div class="partners-flex-item">
+                    <span>1</span>
+                    <div class="partners-flex-text">
+                        Обсудите детали с нашим специалистом и оплатите заказ
+                    </div>
+                </div>
+                <div class="partners-flex-item">
+                    <span>2</span>
+                    <div class="partners-flex-text">
+                        Получите продукцию и консультацию специалистов по укладке
+                    </div>
+                </div>
+                <div class="partners-flex-item">
+                    <span>3</span>
+                    <div class="partners-flex-text">
+                        Получите 3 года гарантийного и сервисного обслуживания
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="container">
         <h2 class="title-page-item">Контакты</h2>
         <div class="main-page-contacts">
