--- a/azbuka46.html
+++ b/azbuka46.html
@@ -372,6 +372,44 @@
         </div>
     </section>
     <section class="container">
+        <h2 class="title-page-item">6 ключевых преимуществ резиновых покрытий</h2>
+        <div class="flex-advantages">
+            <div class="flex-advantages-item">
+                <div class="flex-advantages-item-block">
+                    <h4>Высокая износостойкость</h4>
+                    <p>Устойчивость к истиранию и ударным нагрузкам, не подвергается деформации</p>
+                </div>
+                <div class="flex-advantages-item-block">
+                    <h4>Термостойкость</h4>
+                    <p>Устойчивость к высоким перепадам температур</p>
+                </div>
+                <div class="flex-advantages-item-block">
+                    <h4>Отсутствие запаха</h4>
+                    <p>Высокое качество связующего, что гарантирует полное отсутствие запаха</p>
+                </div>
+            </div>
+            <div class="flex-advantages-item">
+                <img src="images/adv.jpg" alt="">
+            </div>
+            <div class="flex-advantages-item">
+                <div class="flex-advantages-item-block">
+                    <h4>Амортизирующие свойства</h4>
+                    <p>Имеет отличные амортизирующие свойства, снижает нагрузку на суставы спортсменов</p>
+                </div>
+                <div class="flex-advantages-item-block">
+                    <h4>Срок службы от 10 лет</h4>
+                    <p>Уникальные свойства резинового и EPDM гранулята определяют продолжительность срока службы
+                        покрытия</p>
+                </div>
+                <div class="flex-advantages-item-block">
+                    <h4>Стабильность ширины и толщины</h4>
+                    <p>Контролируемая технология обеспечивает неизменность ширины и толщины среза по всей площади
+                        полотна</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container">
         <h2 class="title-page-item">Контакты</h2>
         <div class="main-page-contacts">
             <div class="map-block">
@@ -390,6 +428,8 @@
                 </p>
                 <p><a href="https://azbuka46.ru/"><i class="fa-solid fa-user"></i>
                         https://azbuka46.ru</a></p>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Оставить
+                    заявку</button>
             </div>
         </div>
     </section>
