--- a/category.html
+++ b/category.html
@@ -144,38 +144,27 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Азбука покрытий | Напольные покрытия от производителя</h1>
+                    <h1>Рулонные резиновые покрытия</h1>
                 </div>
             </header>
         </div>
     </div>
     <section class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                <li class="breadcrumb-item"><a href="#">Каталог</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Рулонные резиновые покрытия</li>
+            </ol>
+        </nav>
         <div class="main-flex-catalog">
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog1.jpg"></a>
+                        <a href="#"><img alt="" src="images/catalog2.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
-                        <a href="#">Бесшовное резиновое покрытие</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p> Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM). Высокая прочность материала
-                            позволяет
-                            выкладывать дорожки во дворах многоквартирных домов и на
-                            частной территории и другие площадки.
-                        </p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/rulon.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="category.html">Рулонные резиновые покрытия</a>
+                        <a href="#">ANT Flex Eco Monolit</a>
                     </div>
                     <div class="main-catalog-description">
                         <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового
@@ -183,147 +172,121 @@
                             позволяющего получать высокую прочность сцепления резиновых гранул.</p>
                     </div>
                 </div>
-                <a href="category.html" class="page-btn">Перейти</a>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog10.jpg"></a>
+                        <a href="#"><img alt="" src="images/catalog3.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
-                        <a href="#">Искусственный газон</a>
+                        <a href="#">ANT Flex Eco Granit</a>
                     </div>
                     <div class="main-catalog-description">
-                        <p>Специальное покрытие, имитирующее обычную траву, но более долговечное и удобное.</p>
+                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco Granit на основе цветных ЭПДМ гранул и
+                            регенератной резиновой крошки (не более 50 %).</p>
                     </div>
                 </div>
-                <a href="#" class="page-btn">Подробнее</a>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog11.jpg"></a>
+                        <a href="#"><img alt="" src="images/catalog4.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
-                        <a href="#">Резиновая крошка ЭПДМ</a>
+                        <a href="#">ANT Flex Eco Премиум</a>
                     </div>
                     <div class="main-catalog-description">
-                        <p>Конструкционный материал, обладающий уникальным свойством, способностью к большим обратимым
-                            деформациям (эластичностью).</p>
+                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco на основе крошки из высококачественного
+                            каучука ЭПДМ (TPV).</p>
                     </div>
                 </div>
-                <a href="#" class="page-btn">Подробнее</a>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog12.jpg"></a>
+                        <a href="#"><img alt="" src="images/catalog5.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
-                        <a href="#">Резиновая плитка</a>
+                        <a href="#">ANT Mix</a>
                     </div>
                     <div class="main-catalog-description">
-                        <p>Конструкционный материал, обладающий уникальным свойством, способностью к большим обратимым
-                            деформациям (эластичностью).</p>
+                        <p>Cовременное напольное покрытие на основе регенератной резиновой крошки и цветных ЭПДМ гранул
+                            (не менее 15%).</p>
                     </div>
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
-        </div>
-        <div class="title-page-item">
-            <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
-                консультацию</button>
-        </div>
-    </section>
-    <section class="gray-block">
-        <div class="container">
-            <h3>Партнёрство с нами в 3 шага</h3>
-            <div class="partners-flex">
-                <div class="partners-flex-item">
-                    <span>1</span>
-                    <div class="partners-flex-text">
-                        Обсудите детали с нашим специалистом и оплатите заказ
+            <div class="main-catalog-item">
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog6.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Flex Soft (P650-P580)</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Современная амортизационная подложка на основе регенератной резиновой крошки.</p>
                     </div>
                 </div>
-                <div class="partners-flex-item">
-                    <span>2</span>
-                    <div class="partners-flex-text">
-                        Получите продукцию и консультацию специалистов по укладке
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
+            </div>
+            <div class="main-catalog-item">
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog7.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Combi Flex — ANT Combi Flex Color</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Напольное двуслойное покрытие: верхний слой «flex» на основе окрашенной регенератной
+                            резиновой крошки фракцией, нижний слой - на основе черной регенератной резиновой крошки.</p>
                     </div>
                 </div>
-                <div class="partners-flex-item">
-                    <span>3</span>
-                    <div class="partners-flex-text">
-                        Получите 3 года гарантийного и сервисного обслуживания
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
+            </div>
+            <div class="main-catalog-item">
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog8.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Сombi Standart Color</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Напольное двухслойное покрытие: верхний слой на основе окрашенной регенератной резиновой
+                            крошки, нижний слой - из черной регенератной резиновой крошки.</p>
                     </div>
                 </div>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
-        </div>
-    </section>
-    <section class="container">
-        <h2 class="title-page-item">6 ключевых преимуществ резиновых покрытий</h2>
-        <div class="flex-advantages">
-            <div class="flex-advantages-item">
-                <div class="flex-advantages-item-block">
-                    <h4>Высокая износостойкость</h4>
-                    <p>Устойчивость к истиранию и ударным нагрузкам, не подвергается деформации</p>
+            <div class="main-catalog-item">
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog9.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">ANT Flex — ANT Flex Color</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Цветное плотное напольное покрытие на основе регенератной резиновой крошки</p>
+                    </div>
                 </div>
-                <div class="flex-advantages-item-block">
-                    <h4>Термостойкость</h4>
-                    <p>Устойчивость к высоким перепадам температур</p>
-                </div>
-                <div class="flex-advantages-item-block">
-                    <h4>Отсутствие запаха</h4>
-                    <p>Высокое качество связующего, что гарантирует полное отсутствие запаха</p>
-                </div>
-            </div>
-            <div class="flex-advantages-item">
-                <img src="images/adv.jpg" alt="">
-            </div>
-            <div class="flex-advantages-item">
-                <div class="flex-advantages-item-block">
-                    <h4>Амортизирующие свойства</h4>
-                    <p>Имеет отличные амортизирующие свойства, снижает нагрузку на суставы спортсменов</p>
-                </div>
-                <div class="flex-advantages-item-block">
-                    <h4>Срок службы от 10 лет</h4>
-                    <p>Уникальные свойства резинового и EPDM гранулята определяют продолжительность срока службы
-                        покрытия</p>
-                </div>
-                <div class="flex-advantages-item-block">
-                    <h4>Стабильность ширины и толщины</h4>
-                    <p>Контролируемая технология обеспечивает неизменность ширины и толщины среза по всей площади
-                        полотна</p>
-                </div>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                    консультацию</button>
             </div>
         </div>
     </section>
-    <section class="container">
-        <h2 class="title-page-item">Контакты</h2>
-        <div class="main-page-contacts">
-            <div class="map-block">
-                <script type="text/javascript" charset="utf-8" async
-                    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaa28be4ddb3034f6773bb9dd63d60b96d86611426cb1a48404072f6d97743e9f&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-            </div>
-            <div class="contact-block">
-                <h3>ООО «АЗБУКА ПОКРЫТИЙ»</h3>
-                <p>Напольные покрытия от производителя</p>
-                <p><i class="fa-solid fa-location-dot"></i> 305023, РФ, г Курск, ул Литовская, дом 12А, офис
-                    407</p>
-                <p><a href="tel:+79155103672"><i class="fa-solid fa-square-phone"></i> +7 (915)
-                        510-36-72</a></p>
-                <p><a href="mailto:ekopokrytia@yandex.ru"><i class="fa-solid fa-envelope"></i>
-                        ekopokrytia@yandex.ru</a>
-                </p>
-                <p><a href="https://azbuka46.ru/"><i class="fa-solid fa-user"></i>
-                        https://azbuka46.ru</a></p>
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Оставить
-                    заявку</button>
-            </div>
-        </div>
-    </section>
-
-
 
 
     <footer class="footer-page">
