--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 </a>
             </li>
             <li class="pages__item pages__item_red">
+                <a href="category.html" target="_blank">
+                    <span class="pages__name">Категория</span>
+                    <span class="pages__href">category.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_red">
                 <a href="card.html" target="_blank">
                     <span class="pages__name">Карточка товара</span>
                     <span class="pages__href">card.html</span>
