--- a/azbuka46.html
+++ b/azbuka46.html
@@ -229,6 +229,21 @@
                 </div>
                 <a href="#" class="page-btn">Перейти</a>
             </div>
+            <div class="main-catalog-item">
+                <div class="flex-catalog-item">
+                    <div class="main-catalog-image">
+                        <a href="#"><img alt="" src="images/catalog13.jpg"></a>
+                    </div>
+                    <div class="main-catalog-title">
+                        <a href="#">Полиуретановое связующее</a>
+                    </div>
+                    <div class="main-catalog-description">
+                        <p>Разновидность однокомпонентного полиуретанового клея, обладающего определёнными
+                            физико-химическими свойствами.</p>
+                    </div>
+                </div>
+                <a href="#" class="page-btn">Перейти</a>
+            </div>
         </div>
         <div class="title-page-item">
             <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
